deployment/service.template.yml
---
kind: Service
apiVersion: v1
metadata:
  name: web
  namespace: systema
spec:
  ports:
    - name: server
      port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: web
